--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,13 @@
-# Compiled class file
-*.class
-
-# Log file
+*.settings
+*.project
+**/.settings
+**/.classpath
+**/.eclipse
+**/.project
+**/target
+**/bin
+*.iml
+.idea/
 *.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+out
+*.versionsBackup
